# sno-fo-fro

./: .gitignore  .pre-commit-config.yaml  README.md  ml.ipynb  pyproject.toml
.github/workflows/: check-codestyle.yaml  run-tests.yaml
pretrained/: GBM_2_AutoML_1_20250122_184812  GBM_2_AutoML_1_20250122_223919  XGBoost_grid_1_AutoML_2_20250122_191256_model_11
src/sno_fo_fro/: __init__.py  analyzer.py  app.py  classifier.py  core.py  hypotheses.py  image_processor.py  osogi-hypotheses.py  osogi_hypotheses.py
src/sno_fo_fro/devhelp/: experimentor.py
src/sno_fo_fro/experiment/: README.md  __main__.py  experimenter.py
src/sno_fo_fro/scripts/: experimentor.py  generate_csv.py
tests/: test_image_contrast_processor.py  test_image_luminance_processor.py  test_image_saturation_processor.py  test_simple.py
