[project]
name = "sno-fo-fro"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Osogi", email = "dragonmail135159@gmail.com" }
]
dependencies = [
    "opencv-python>=4.10.0.84",
    "pyqt5>=5.15.11",
    "pre-commit>=4.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "matplotlib>=3.10.0",
    "scipy>=1.15.1",
    "pytest>=8.3.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sno_fo_fro"]
